--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.2.0",
